# SGP-GraduateSchool-digitalgeometry

./: .gitmodules  CMakeLists.txt  README.md  drawDSS.cpp  dt.cpp  geodiff.cpp  homotopic-thinning.cpp  primal-dual.cpp  primal-hausdorff.cpp  quickhull-barany.cpp  quickhull.cpp  simpleTest.cpp
.github/workflows/: c-cpp.yml
slides/: README.md
src/: digital-topology.cpp  homotopic-thinning.cpp  primal-dual.cpp  quickhull.cpp  shapes.cpp  volumetric.cpp
vol/: README.md  largebunny-64.vol
